# backend_shared

./: .gitignore  CONFIGURATION_IMPROVEMENTS.md  Dockerfile  README.md  __init__.py  bandit-report.json  model.json  pyproject.toml
.github/workflows/: shared-package-ci.yml
app/auth/: cognito_auth.py  test_cognito_auth.py
app/domain/entities/: common.py
app/infra/: auth_middleware.py
auth/: token_verifier.py
database/: connection.py  repository.py  service_db.py
examples/: .env.ci  .env.development  .env.docker  .env.testing  ENVIRONMENT_CONFIGURATION.md  README.md  configuration_examples.py  environment_example.py  s3_usage_example.py
scripts/: create_dummy_data.py
shared/: __init__.py
shared/app/domain/entities/: base.py  organization.py  user.py
shared/auth/: api_keys.py  token_verifier.py
shared/config/: __init__.py  base_config.py  test_config.py
shared/database/: base.py
shared/storage/: __init__.py  s3_client.py
tests/: conftest.py  test_api_keys.py  test_call.py  test_config.py  test_config_new_features.py  test_database.py  test_database_connection.py  test_repository.py  test_s3_storage.py  test_sms.py  test_token_verifier.py
